# ChangeLog for media-gfx/pstoedit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.65 2010/03/31 10:08:51 ssuominen Exp $

  31 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  pstoedit-3.45-r1.ebuild, pstoedit-3.50.ebuild:
  Fix imagemagick deps to allow both "cxx" and "-nocxx".

  10 Jan 2010; nixnut <nixnut@gentoo.org> pstoedit-3.50.ebuild:
  ppc stable #294109

  26 Dec 2009; Peter Volkov <pva@gentoo.org> pstoedit-3.45-r1.ebuild,
  pstoedit-3.50.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

  30 Nov 2009; Raúl Porcel <armin76@gentoo.org> pstoedit-3.50.ebuild:
  alpha/ia64/sparc stable wrt #294109

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> pstoedit-3.50.ebuild:
  Stable for HPPA (bug #294109).

  23 Nov 2009; Markus Meier <maekke@gentoo.org> pstoedit-3.50.ebuild:
  amd64/x86 stable, bug #294109

*pstoedit-3.50 (10 Oct 2009)

  10 Oct 2009; Ryan Hill <dirtyepic@gentoo.org> +pstoedit-3.50.ebuild,
  +files/pstoedit-3.50-parallel.patch,
  +files/pstoedit-3.50-plugin-close.patch:
  Version bump and fix parallel build (bug #278417).

*pstoedit-3.45-r1 (18 Sep 2009)

  18 Sep 2009; Ryan Hill <dirtyepic@gentoo.org> +pstoedit-3.45-r1.ebuild,
  +files/pstoedit-3.45-am_path_pstoedit.patch:
  Fix mangled m4, bug #175679, patch from Honza Macháček.

  12 Sep 2009; Petteri Räty <betelgeuse@gentoo.org> pstoedit-3.45.ebuild:
  Migrate to EAPI 2 in order to nuke built_with_use.

  20 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  pstoedit-3.45.ebuild:
  Use emake -j1 and list the bug for the parallel build failure.

  30 Apr 2009; Alexis Ballier <aballier@gentoo.org> pstoedit-3.45.ebuild,
  +files/pstoedit-3.45-gcc-4.4.patch:
  fix build with gcc 4.4, by Daniel J. <sleeperseven@hotmail.com>, bug
  #265044
