@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX pstoedit-3.45-am_path_pstoedit.patch 750 RMD160 cecc99e65ab51d4cc346af62ceefaa97dde0d774 SHA1 5c83d10076c55b84e5bfea285615f85984774063 SHA256 2ff71c57df130ea0dfb946548a436e5fc042771cc507afc2b96cdbc881e7195e
 AUX pstoedit-3.45-gcc-4.3.patch 253 RMD160 5eea970d6f5936160f7c1bc7dd4ffa12b93b8de9 SHA1 7873231790e1d6cbaec5c79c151b7bd2e75c10bd SHA256 30ec4235d0551c752c5092790ef296440bac15113aafaaa7f28d6abed55217b8
 AUX pstoedit-3.45-gcc-4.4.patch 290 RMD160 712a204fae448b31da7284ac6731d321426c8cc2 SHA1 c6a143d391ce27b590fe32da815538b693e4c4eb SHA256 fa64304d920b4ab944148029f87830dd6c17d2d33baa1c54e2971a0573379cc9
@@ -5,7 +8,14 @@ AUX pstoedit-3.50-parallel.patch 1994 RMD160 9d6ac711233cba48c013f4f4ac86ce065aa
 AUX pstoedit-3.50-plugin-close.patch 259 RMD160 3b38e0d68fb1c7d7e2165969a0afba438bc79e5a SHA1 54bbe019de66eb4cb8525371462595d21fbd074e SHA256 b579b146b2297d69329a7a61707d2cb28fd1506b01da556dfdbb58d12826b1d9
 DIST pstoedit-3.45.tar.gz 848922 RMD160 dbe610807dae3ece5d32979100795d3399beb23a SHA1 3eecd5efcd4f3d1752d13303a2d1b64346f74171 SHA256 a489e47e536c194d7fc3a8121a274156a3577d3d893ac4b54d79849bb29f7fd9
 DIST pstoedit-3.50.tar.gz 894115 RMD160 ba9be28424ced48464d93dd8bca60107d181a1c3 SHA1 5685bef29fa00aae7cc314d3a1dd21612a98eb2b SHA256 22b16452d7538358f8ecdff1fec29a8b6d4da49dffec9ae436f60bd95d105711
-EBUILD pstoedit-3.45-r1.ebuild 1713 RMD160 d8c6d5300a3d163d8cb415aa32c7b0c468bf46eb SHA1 d32d38edd8ff9df4946668ad9c2a5a6219a7e19f SHA256 4709a4086160fdf65c068463998ff185ea71f3e836c6828dd6ce3778d9f30efe
-EBUILD pstoedit-3.50.ebuild 1400 RMD160 42fa567a87d16f817f4387075bc2dd674ff6bd0f SHA1 69ba95218d9ef24c09614e04b3bc61987c748bf0 SHA256 e4b8b03362e1a0bf9743188fa5148c7a2d66f6db68bc9c453d584011618c9aea
-MISC ChangeLog 9222 RMD160 89378933e0fd91d3a8390bb10ccc18b83f22ac2e SHA1 fbd9bfac7405084f6cb917b12d3b3f8fd5b5d3b5 SHA256 4669ea443e9a4566fc195a3f2bf3e31f23a139325fc47211743769a4857382fd
+EBUILD pstoedit-3.45-r1.ebuild 1673 RMD160 faf5ff19d4419dea2001eb4c1c9ea502f536b92a SHA1 350651b5ff08d22d7e0b7afa6a069fcab2067495 SHA256 c84e4160d78bf676b0039b67ec9afd5f40e47f109a3ec8c14cc123257ec9d2ad
+EBUILD pstoedit-3.50.ebuild 1360 RMD160 07d3d276c845dede2b3f5c5ea58a6a735d5b5597 SHA1 e0d839914e9fed2d0d494ceb3161bbdd9b78d0d8 SHA256 028fa215aaba7861ca219a317fc4f1468c2479e19a0184d5adb58e4ed2793e2b
+MISC ChangeLog 9356 RMD160 b1fa59de54be63cb3544d79d3d52eb980a81a806 SHA1 c8bac80277f0ac0c9c0e6bd1b71dd54446e25372 SHA256 0a2285ce5255be9affe29182dee091c6183eee897952ab54967f8817c07ec618
 MISC metadata.xml 266 RMD160 405ece9efc9a19d31ca7394a9c159a51309a3bec SHA1 7cb5575a9c14679a2f6bbeb1f11333918dda2368 SHA256 5fe90f8eb0d17c47a5e85afd6f31144f68a86e4819c1a43f11b53789f6015c57
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkv+T58ACgkQkKaRLQcq0GKYAQCdHl4HA5CbDSICSMyWpoaVaeO+
+OLcAoI9jo7R25F7H/gGsDAhLF8JkW49F
+=/tQg
+-----END PGP SIGNATURE-----
