@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/pstoedit
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.65 2010/03/31 10:08:51 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.66 2010/05/27 10:54:29 maekke Exp $
+
+  27 May 2010; Markus Meier <maekke@gentoo.org> pstoedit-3.45-r1.ebuild,
+  pstoedit-3.50.ebuild:
+  media-gfx/imagemagick[nocxx] is gone
 
   31 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
   pstoedit-3.45-r1.ebuild, pstoedit-3.50.ebuild:
